src/objects/jj_rb_SAP_Sales_Data__c.object
<CustomObject>
    <description>Sales data from SAP for rebate customer and products are stored here.</description>
    <fields>
        <fullName>jj_rb_Invoice_Qty__c</fullName>
        <description>Quantity value in SAP Sales invoice.</description>
        <label>Invoice Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Invoice_Type__c</fullName>
        <description>Type of sales invoice.</description>
        <label>Invoice Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Month__c</fullName>
        <description>Month of the sales invoice.</description>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_Trade_Sales__c</fullName>
        <description>Net trade sales value is stored here.</description>
        <label>Net Trade Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Customer_ID__c</fullName>
        <description>SAP Customer Id</description>
        <label>SAP Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Material_No__c</fullName>
        <description>SAP Material no of the product.</description>
        <label>SAP Material No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Year__c</fullName>
        <description>Year of the invoice</description>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SAP Sales Data</label>
    <nameField>
        <label>SAP Sales Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Sales Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>